--- a/src/CNAB.WebAPI/appsettings.json
+++ b/src/CNAB.WebAPI/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost:5432;User Id=postgres;Password=key142398;Database=CNABDataBase"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
