--- a/tests/CNAB.Domain.Test/CNAB.Domain.Test.csproj
+++ b/tests/CNAB.Domain.Test/CNAB.Domain.Test.csproj
@@ -19,6 +19,11 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\..\src\CNAB.Domain\CNAB.Domain.csproj" />
+    <ProjectReference Include="..\CNAB.TestHelpers\CNAB.TestHelpers.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
     <Using Include="Xunit" />
   </ItemGroup>
 
