--- a/tests/CNAB.WebAPI.Test/CNAB.WebAPI.Test.csproj
+++ b/tests/CNAB.WebAPI.Test/CNAB.WebAPI.Test.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
@@ -11,17 +11,15 @@
 
   <ItemGroup>
     <PackageReference Include="coverlet.collector" Version="6.0.0" />
-	  <PackageReference Include="FluentAssertions" Version="8.2.0" />
+    <PackageReference Include="FluentAssertions" Version="8.2.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
-	  <PackageReference Include="Moq" Version="4.20.72" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\CNAB.Application\CNAB.Application.csproj" />
-    <ProjectReference Include="..\..\src\CNAB.Domain\CNAB.Domain.csproj" />
-    <ProjectReference Include="..\..\src\CNAB.Infra.Data\CNAB.Infra.Data.csproj" />
+    <ProjectReference Include="..\..\src\CNAB.WebAPI\CNAB.WebAPI.csproj" />
     <ProjectReference Include="..\CNAB.TestHelpers\CNAB.TestHelpers.csproj" />
   </ItemGroup>
 
